cluster/steve/kubeinvaders/kubeinvaders.yaml
# Source: kubeinvaders/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeinvaders
  labels:
    app.kubernetes.io/name: kubeinvaders
    helm.sh/chart: kubeinvaders-0.1.1
    app.kubernetes.io/instance: kubeinvaders
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kubeinvaders
    app.kubernetes.io/instance: kubeinvaders
---
# Source: kubeinvaders/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeinvaders
  labels:
    app.kubernetes.io/name: kubeinvaders
    helm.sh/chart: kubeinvaders-0.1.1
    app.kubernetes.io/instance: kubeinvaders
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubeinvaders
      app.kubernetes.io/instance: kubeinvaders
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubeinvaders
        app.kubernetes.io/instance: kubeinvaders
    spec:
      containers:
        - env:
            - name: ROUTE_HOST
              value: "kubeinvaders.$(hostname)"
            - name: TOKEN
              valueFrom:
                secretKeyRef:
                  key: token
                  name: kubeinvaders-token
            - name: HITSLIMIT
              value: "1"
            - name: ALIENPROXIMITY
              value: "15"
            - name: UPDATETIME
              value: "1"
          name: kubeinvaders
          image: "luckysideburn/kubeinvaders:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs
  namespace: kubeinvaders
spec:
  hosts:
    - "kubeinvaders.$(hostname)"
  gateways:
    - public-gateway.istio-system.svc.cluster.local
  http:
    - route:
        - destination:
            port:
              number: 8080
            host: kubeinvaders
